style.css
/* ========= BASE CSS SETUP ========= */

:root {
    --highlight-color: #b23523;
}

*, ::before, ::after {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    scroll-behavior: smooth;
}

body {
    width: 100vw;
    height: auto;
    overflow-x: hidden;
}

header, main, section, footer {
    position: relative;
    margin: 0px auto;
    width: 100%;
    z-index: 0;
}

.grid {
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: 1fr;
    gap: var(--gap, 1rem);
}

.flex {
    display: flex;
    flex-flow: column nowrap;
    justify-content: flex-start;
    align-items: flex-start;
    gap: var(--gap, 1rem);
    row-gap: 20px;
}

.container {
    position: relative;
    max-width: 1200px;
    width: 100%;
    margin: 0px auto;
    padding: 60px 20px;
    transition: all .3s ease;
}

.col {
    width: 100%;
}

.background-overlay {
    position: absolute;
    height: 100%;
    width: 100%;
}



/* === Responsiveness: Tablet === */
@media only screen and (max-width: 1024px) {
    .container {
        max-width: 90%;
        padding: 60px 0px;
    }
}



/* === Responsiveness: Mobile === */
@media only screen and (max-width: 767px) {
    .container {
        max-width: 90%;
    }
}



/* ========= FONT CSS ========= */

h1, h2, h3, h4, h5, h6, p, a, div, button {
    text-rendering: optimizeLegibility;
    font-family: "Montserrat", sans-serif;
    font-size: 1em;
    font-weight: normal;
    text-transform: none;
    text-decoration: none;
    letter-spacing: normal;
    word-spacing: normal;
    line-height: 1em;
    text-shadow: 1px 1px 1px rgba(0,0,0,0.005);
    -webkit-font-smoothing: antialiased;
    -moz-font-smoothing: unset;
    -moz-osx-font-smoothing: grayscale;
    -webkit-backface-visibility: hidden;
    -moz-backface-visibility: hidden;
    backface-visibility: hidden;
    transition: all .3s ease;
}

h1, h2, h3, h4, h5, h6, button {
    font-family: "Teko", sans-serif;
    font-weight: 700;
    line-height: 0.75em;
    transition: .3s ease;
}

h1 {
    font-size: 124px;
}

h2 {
    font-size: 52px;
}

h3 {
    font-size: 48px;
}

h4 {
    font-size: 32px;
}

h5 {
    font-size: 24px;
}

h6 {
    font-size: 20px;
}

p {
    font-size: 16px;
}

@media only screen and (max-width: 767px) {
    h1, h2, h3, h4, h5, h6, p, a, div, button {
        line-height: 0.8em;
    }
}



/* ========= BUTTON STYLES CSS ========= */

button {
    font-size: 16px;
    font-weight: 400;
}

.text-btn:hover {
    background: rgba(255,255,255,.5);
    background: #b23523;
    color: #fff;
}



/* ========= MISCELLANEOUS ========= */

.d-only {
    display: inline-block;
}

.t-only {
    display: none;
}

.m-only {
    display: none;
}



/* === Responsiveness: Tablet === */
/* @media only screen and (max-width: 1024px) {
    .d-only {
        display: none;
    }

    .t-only {
        display: inline-block;
    }

    .m-only {
        display: none;
    }
} */



/* === Responsiveness: Mobile === */
@media only screen and (max-width: 767px) {
    .d-only {
        display: none;
    }

    /* .t-only {
        display: none;
    } */

    .m-only {
        display: inline-block;
    }
}



/* ========= HEADER CSS ========= */

header#header {
    position: absolute;
    background: transparent;
    z-index: 1001;
}

header#header > .container {
    grid-template-columns: 33.33333% 1fr;
    grid-template-rows: 1fr;
    max-width: 95%;
    padding: 10px 0px;
}



/* --- LOGO --- */
.logo-col {
    justify-content: center;
}

.logo-col > a {
    position: relative;
}

.logo-col > a::before {
    content: "";
    display: block;
    width: calc(100% + 4px);
    height: calc(200% + 4px);
    position: absolute;
    left: -2px;
    bottom: 0px;
    border: 2px solid #fff;
    border-radius: 0px 0px 50px 50px;
}

img.logo {
    width: 80px;
    height: 80px;
    border: 1px solid #fff;
    border-radius: 50%;
    margin: 5px;
    background-color: transparent;
}



/* --- NAVIGATION --- */
nav.flex {
    flex-flow: column nowrap;
    justify-content: center;
    align-items: flex-end;
}

ul.primary-navigation {
    flex-flow: row wrap;
    justify-content: flex-end;
    align-items: center;
    column-gap: 20px;
    list-style-type: none;
}

li.menu-item {
    justify-content: center;
    align-items: center;
    overflow: hidden;
}

li.menu-item a {
    position: relative;
    font-family: "Teko", sans-serif;
    font-size: 18px;
    text-transform: uppercase;
    padding: 10px 24px 10px 12px;
    color: #fff;
    z-index: 0;
    transition: all .3s ease;
}

li.menu-item a:hover {
    color: #333;
}

li.menu-item a::after {
    content: "";
    display: block;
    position: absolute;
    top: calc(50% - 1px);
    left: 0px;
    height: 100%;
    width: 100%;
    transform: translateY(-50%);
    clip-path: polygon(0 0, 87.5% 0%, 100% 50%, 87.5% 100%, 0 100%, 0% 50%);
    background-image: linear-gradient(
        180deg,
        rgba(255,255,255) 0%,
        rgba(255,255,255) 100%);
    background-position: left center;
    background-repeat: no-repeat;
    background-size: 0%;
    opacity: .5;
    z-index: -1;
    transition: all .3s ease;
}

li.menu-item a:hover::after {
    background-size: 100%;
    opacity: 1;
}



/* --- ARIA-HIDDEN --- */
ul.primary-navigation li.menu-item a > [aria-hidden="true"] {
    font-weight: 400;
    margin-inline-end: .2em;
}
/* ... */

